--- a/app/directives/main.styl
+++ b/app/directives/main.styl
@@ -1,2 +1,23 @@
 .main
   color red
+
+
+.main ul
+  list-style-type none
+  margin 0
+  padding 0
+  overflow hidden
+  background-color #333
+
+.main li
+  float left
+
+.main li
+  a
+    display inline-block
+    color white
+    text-align center
+    padding 14px 16px
+    text-decoration none
+  a:hover
+    background-color #111
